fix html scraper 'bugs' and consolidate newsletter service/controllers
