# apps/server/ADWAIS/src/Domain/Entities/Intranet/Newsletter.cs
@@ -1,13 +1,0 @@
-using System;
-
-namespace Adwais.Domain.Entities.Intranet;
-
-public class Newsletter
-{
-    public Guid Id { get; set; }
-    public required string Title { get; set; }
-    public required string Body { get; set; }
-    public required string Category { get; set; }
-    public required DateTime CreatedAt { get; set; }
-    public DateTime? UpdatedAt { get; set; }
-}
